# bike-rental-demand-pred

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
config_examples/: eval_config.json  train_config.json
docs/: model_architecture.html  model_architecture.md  route_prediction.md
pybike/: agent.py  config.py  dataloader.py  eval.py  metrics.py  model.py  plots.py  preprocessing.py  station.py  train.py  trip.py  utils.py
pybike/tools/: eval.py  train.py
