[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pybike"

version = "0.1.0"

description = "A python package for training transformer-based models for demand prediction."

readme = "README.md"

license = { text = "MIT" }

authors = [
    { name = "Alejandro Requena Bermejo", email = "rb.jandro@gmail.com" }
]

dependencies = [
    "torch==2.5.0",
    "numpy==2.1.2",
    "matplotlib==3.9.2",
    "joblib==1.4.2",
    "pandas==2.2.3",
    "polars==1.10.0",
    "scikit-learn==1.5.2",
    "python-dotenv==1.0.1",
    "pydantic==2.9.2"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Repository" = "https://github.com/ale-knk/bike-rental-demand-pred"

[tool.setuptools.packages.find]
include = ["pybike"]
exclude = ["data", "output"]

[project.scripts]
train = "pybike.tools.train:main"
evaluate = "pybike.tools.eval:main"